diesel_compile_tests/tests/fail/table_without_primary_key.rs
#[macro_use] extern crate diesel;

table! {
    user {
        user_id -> Integer,
        name -> Text,
    }
}

fn main() {}
